--- a/style.css
+++ b/style.css
@@ -30327,6 +30327,11 @@ body.single-post .footer-menu .menu-item-blog .single,
   padding: 30px;
 }
 
+.wpcf7-form {
+  width: 100%;
+  position: relative;
+}
+
 .custom-form .form-group {
   margin-bottom: 30px;
 }
@@ -30341,28 +30346,47 @@ body.single-post .footer-menu .menu-item-blog .single,
     font-size: 14px;
   }
 }
-.custom-form .custom-input,
-.custom-form .select2 .select2-selection--single {
+.custom-form .custom-input {
   padding: 15px 20px;
   border-radius: 8px;
   height: 50px;
   background-color: var(--secondary-gray);
   border: 1px solid var(--primary-gray);
-  font-size: 16px;
+  font-size: 16px !important;
   font-weight: 400;
   line-height: 130%;
   color: var(--tertiary-title);
+  max-width: 100%;
 }
-.custom-form .custom-input:focus,
-.custom-form .select2 .select2-selection--single:focus {
+.custom-form .custom-input:focus {
   box-shadow: none;
   border: 1px solid var(--primary);
 }
 @media (max-width: 767px) {
-  .custom-form .custom-input,
-  .custom-form .select2 .select2-selection--single {
-    font-size: 14px;
+  .custom-form .custom-input {
     padding: 14px 18px;
+    height: 46px;
+    background-color: var(--secondary-gray);
+    border: 1px solid var(--primary-gray);
+  }
+}
+.custom-form .select2-selection.select2-selection--single {
+  padding: 10px 20px;
+  height: 50px;
+  background-color: var(--secondary-gray);
+  border: 1px solid var(--primary-gray);
+  font-size: 16px;
+  color: var(--primary-title);
+}
+.custom-form .select2-selection.select2-selection--single .select2-selection__rendered {
+  padding: 0;
+}
+.custom-form .select2-selection.select2-selection--single .select2-selection__arrow {
+  top: 12px;
+}
+@media (max-width: 767px) {
+  .custom-form .select2-selection.select2-selection--single {
+    padding: 9px 18px;
     height: 46px;
   }
 }
@@ -30383,7 +30407,6 @@ body.single-post .footer-menu .menu-item-blog .single,
 }
 @media (max-width: 767px) {
   .custom-form .custom-textarea {
-    font-size: 14px;
     padding: 14px 18px;
     min-height: 140px;
   }
@@ -30408,7 +30431,6 @@ body.single-post .footer-menu .menu-item-blog .single,
 }
 @media (max-width: 767px) {
   .submit-btn {
-    font-size: 14px;
     padding: 14px 24px;
   }
 }
